Updates for the example Java server to work with the latest Python client example