@@ -1,10 +1,8 @@
 package io.a2a.examples.helloworld.server;
 
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
-import io.a2a.spec.AgentAuthentication;
 import io.a2a.spec.AgentCapabilities;
 import io.a2a.spec.AgentCard;
 import io.a2a.spec.AgentSkill;
@@ -19,19 +17,20 @@ public class AgentCardProducer {
     @PublicAgentCard
     public AgentCard agentCard() {
         return new AgentCard.Builder()
-                .name("MyAgent")
-                .description("My agent card")
+                .name("Hello World Agent")
+                .description("Just a hello world agent")
                 .url("http://localhost:9999")
-                .version("1.0")
+                .version("1.0.0")
                 .documentationUrl("http://example.com/docs")
                 .capabilities(new AgentCapabilities(true, true, true))
                 .defaultInputModes(Collections.singletonList("text"))
                 .defaultOutputModes(Collections.singletonList("text"))
                 .skills(Collections.singletonList(new AgentSkill.Builder()
-                                .id("skill-123")
-                                .name("Greeter")
-                                .description("Greets the user")
-                                .tags(Collections.singletonList("greeting"))
+                                .id("hello_world")
+                                .name("Returns hello world")
+                                .description("just returns hello world")
+                                .tags(Collections.singletonList("hello world"))
+                                .examples(List.of("hi", "hello world"))
                                 .build()))
                 .build();
     }
